<?xml version="1.0"?>
<package format="2">
  <name>vrp_ros</name>
  <version>0.0.0</version>
  <description>The vrp_ros package</description>

  <maintainer email="lorenzo.gentilini6@unibo.it">nvidia</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <export>
  </export>
</package>
